frontend/tests/cases/negative/interfaces/kind-mismatch/badKindInFunctionConstraint.gr
interface Simple (a : Type -> Type)


-- we expect 'a' to have kind 'Type -> Type' for Simple,
-- but instead have kind 'Type'
foo : forall {a : Type} . {Simple a} => a -> a
foo x = x
